--- a/a.html
+++ b/a.html
@@ -63,9 +63,8 @@
 	<header id="index">
 		<div class="container">
 			<!-- Sayaclar.com Code Start  -->
-			<div style="font-size: 1px;" align="center"><script language="Javascript" src="http://sa.sayaclar.com/c/s4.php?a=42q4v5r&s=1a5"></script></div>
+			<div align="center"><script language="Javascript" src="http://sa.sayaclar.com/c/s4.php?a=vi7kfry&s=1a5"></script></div>
 			<!-- Sayaclar.com Code End -->
-
 		</div>
 	</header>
 
