--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 		$(document).ready(function(){
 			$(".dsb").click(function(){
 				swal({
-					title: "Dikkat!",
-					text: "Bu sekme çok yakında aktif olacaktır.",
-					icon: "error",
+					title: "Bilgilendirme!",
+					text: "Ödevler kısmı sayfası kodlanmaya devam ediliyor.",
+					icon: "info",
 					button: "Kapat",
 				});
 			});
