--- a/dp.html
+++ b/dp.html
@@ -165,9 +165,9 @@
 		$(document).ready(function(){
 			$(".dsb").click(function(){
 				swal({
-					title: "Dikkat!",
-					text: "Bu sekme çok yakında aktif olacaktır.",
-					icon: "error",
+					title: "Bilgilendirme!",
+					text: "Ödevler kısmı sayfası kodlanmaya devam ediliyor.",
+					icon: "info",
 					button: "Kapat",
 				});
 			});
