--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 			<li>
 				<a class="dsb">Ödevler</a>
 			</li>
+			<li>
+					<a class="ypn">Yapanlar</a>
+			</li>
 		</ul>
 	</div>
 
@@ -85,6 +88,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 	<script>
