--- a/dp.html
+++ b/dp.html
@@ -72,8 +72,8 @@
 							<ol>
 								<li>Matematik</li>
 								<li>Matematik</li>
-								<li>Tarih</li>	
-								<li>Tarih</li>
+								<li>Kimya</li>	
+								<li>Kimya</li>	
 								<li>Din Kültürü</li>
 								<li>Rehberlik</li>
 								<li>Görsel</li>
@@ -89,12 +89,12 @@
 						</div>
 						<div class="ders">
 							<ol>
-								<li>Fizik</li>
-								<li>Fizik</li>
+								<li>Tarih</li>
+								<li>Tarih</li>
 								<li>Matematik</li>	
 								<li>Matematik</li>
-								<li>Edebiyat</li>
 								<li>Din Kültürü</li>
+								<li>Edebiyat (Kitap Okuma)</li>
 								<li>İngilizce</li>
 								<li>İngilizce</li>
 							</ol>
@@ -110,10 +110,10 @@
 							<ol>
 								<li>Matematik</li>
 								<li>Matematik</li>
-								<li>Sosyal Etkinlik</li>	
-								<li>Sosyal Etkinlik</li>
-								<li>Kimya</li>
-								<li>Kimya</li>
+								<li>Fizik</li>	
+								<li>Fizik</li>	
+								<li>Felsefe</li>
+								<li>Felsefe</li>
 								<li>Edebiyat</li>
 								<li>Edebiyat</li>
 							</ol>
@@ -133,8 +133,8 @@
 								<li>Almanca</li>
 								<li>Beden</li>
 								<li>Beden</li>
-								<li>Felsefe</li>
-								<li>Felsefe</li>
+								<li>Sosyal Etkinlik</li>
+								<li>Sosyal Etkinlik</li>
 							</ol>
 						</div>
 					</div>
