--- a/dp.html
+++ b/dp.html
@@ -180,7 +180,7 @@
 				Swal.fire({
 					icon: 'info',
 					title: 'Bu Websiteyi Yapanlar',
-					text: 'Kodlayan: Harun Reşit Korkmaz - Bir Şey Yapmasa da Destek Veren: Mert Yılmaz',
+					text: 'kod: harun - yancı: mert',
 					confirmButtonText: 'sus knk',
 				})
 			});
